--- a/src/screens/App.scss
+++ b/src/screens/App.scss
@@ -17,6 +17,7 @@
 .content-wrapper {
   width: calc(100% - 200px);
   height: 100%;
+  padding-left: 20px;
   overflow-y: auto;
   overflow-x: hidden;
 }
